--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -284,7 +284,7 @@ $D(P||Q) := \int^\infty_{-\infty} p(x)f(\frac{p(x)}{q(x)})$ is the KL divergence
 <!-- With large $m$, chi-squared is asymptotically normal by the CLT. Thus, by CLT, ${\chi^2}_{m} \tilde{} N(m, 2m)$, which would depend on the number of discretization used to approximate the continuous distribution. Then $b_n = 1-1/n$ quantile of the normal distribution and $a_n = 1/[n*\phi(b_n)]$ where $\phi$ is the normal density function. $n$ is the number of pairwise comparisons being made. -->
 
 
-## Definition of the distance measure
+## Definition
 
 Consider two cyclic granularities $A$ and $B$, such that $A = \{ a_j: j = 1, 2, \dots, J\}$ and $B = \{ b_k: k = 1, 2, \dots, K\}$ with $A$ placed across x-axis and $B$ across facets. Let the pairwise distances between pairs $(a_{j} b_{k}, a_{j'}b_{k'})$ be denoted as $d_{(jk, j'k')} = JSD(a_{j}b_{k}, a_{j'}b_{k'})$. Pairwise distances could be within-facets or between-facets. Figure \ref{fig:distance-explain} illustrates how the within-facet or between-facet distances are defined. Pairwise distances are within-facets ($d_{w}$) when $b_{k} = b_{k'}$, that is, between pairs of the form $(a_{j}b_{k}, a_{j'}b_{k})$ as shown in panel (3) of Figure \ref{fig:distance-explain}. If categories are ordered (like all temporal cyclic granularities), then only distances between pairs where $a_{j'} = (a_{j+1})$ are considered (panel (4)). Pairwise distances are between-facets ($d_{b}$) when they are considered between pairs of the form $(a_{j}b_{k}, a_{j}b_{k'})$.
 
@@ -352,7 +352,7 @@ $$wpd = max_{j, j', k, k'}(d*_{(jk), (j'k')})
 
 <!-- A stronger measure "max" is chosen for aggregating x-axis categories compared to "median" for aggregating facet categories as the measure is intended to put more importance in pointing towards distributional differences between x-axis categories than for facet categories. -->
 
-## Properties of the distance measure
+## Properties
 
 A simulation study is carried out to explore how $wpd$ performs under various designs, its parameters and limitations. To this end, simulations were carried out for four different designs and the following factors that could potentially have an impact on the values of $wpd$:
 
@@ -404,10 +404,14 @@ G21 %>%
 
 # Normalisation of the distance measure
 
-The distribution of wpd is different for different levels of facets and x-axis levels. This is because the statistic maximum which is used to define $wpd$ is affected by the number of categories. The measure would have higher values if $A$ or $B$ has higher levels. However, we would ideally want a higher value of the measure only if there is significant difference between distributions across facet or x-axis categories, and not because the number of categories $J$ or $K$ is high. Therefore, in order to compare $wpd$ across different combinations of facet and x-axis levels, we need to eliminate the impact of different levels of the facets and x-axis first and get a normalized measure. Henceforth we call the measure already discussed as $wpd_{raw}$ and the normalized measure as $wpd_{norm}$. The measure $wpd_{norm}$ could potentially lead to comparison of the measure across different panels and also identifying only the interesting panels from a data set. We discuss two approaches for normalization, both of which are based on the simulation results conducted in the earlier section.
+The distribution of wpd is different for different levels of facets and x-axis levels. This is because the statistic maximum which is used to define $wpd$ is affected by the number of categories. The measure would have higher values if $A$ or $B$ has higher levels. However, we would ideally want a higher value of the measure only if there is significant difference between distributions across facet or x-axis categories, and not because the number of categories $J$ or $K$ is high. Therefore, in order to compare $wpd$ across different combinations of facet and x-axis levels, we need to eliminate the impact of different levels of the facets and x-axis first and get a normalized measure. Henceforth we call the measure already discussed as $wpd_{raw}$ and the normalized measure as $wpd_{norm}$. The measure $wpd_{norm}$ could potentially lead to comparison of the measure across different panels and also identifying only the interesting panels from a data set. We discuss two approaches for normalization, both of which are based on the simulation results.
 
 
 <!-- The nodes and the storage used are as follows: -->
+
+## Simulation environment
+
+Simulation studies were carried out to study the behavior of $wpd$, build the normalization method as well as compare and evaluate different normalization approaches. R version 4.0.1 (2020-06-06) is used with the platform: x86_64-apple-darwin17.0 (64-bit) running under: macOS Mojave 10.14.6 and MonaRCH, which is a next-generation HPC/HTC Cluster, designed from the ground up to address the computing needs of the Monash HPC community.
 
 ## Methodology
 
@@ -420,7 +424,7 @@ We need a transformation on ${wpd}$ which will make it independent of the values
 
 ### Permutation approach
 
-The permutation approach ensures that the distribution of the normalized distance measure has the same mean and standard deviation across all combinations of $nx_i$ and $nfacet_j$. The normalized distances through permutation is computed as follows: $x^{perm}_{k} =  (x_{k} - mean_l(x_{k,l}))/sd_l(x_{k, l})$,  $x^{perm}_{k}$ is the value of the $wpd_{perm$ for the $k^{th}$ panel. Standardizing the variable $wpd_{perm}$ in this approach leads to $location = 0$ and $scale = 1$ for this variable.
+The permutation approach ensures that the distribution of the normalized distance measure has the same mean and standard deviation across all combinations of $nx_i$ and $nfacet_j$. The normalized distances through permutation is computed as follows: $x^{perm}_{k} =  (x_{k} - mean_l(x_{k,l}))/sd_l(x_{k, l})$,  $x^{perm}_{k}$ is the value of the $wpd_{perm}$ for the $k^{th}$ panel. Standardizing the variable $wpd_{perm}$ in this approach leads to $location = 0$ and $scale = 1$ for this variable.
 
 While this works successfully to make the mean and standard deviation across different $nx$ and $nfacet$ (as seen in Figure \ref{fig:}), it is computationally heavy and time consuming, and hence less user friendly when being actually used in practice. Hence, we propose another approach to normalization which is more approximate than exact but still has the same accuracy when compared to the permutation approach.
 
@@ -428,9 +432,12 @@ While this works successfully to make the mean and standard deviation across dif
 
 ### Modelling approach
 
+
+_Linear model_  
+
 A log-linear model is fitted to see how the values of $wpd_{raw}$ changes with the values of $nx$ and $nfacet$.  The model is of the form $$y_k = a+b*log(z_k) + e_k$$, where, $y_k = median_l(x_{k, l})$ and $e_k$ are idiosyncratic errors. We have gone with the approach of fitting a linear regression model to estimate the parameters $a$ and $b$. The estimates and other model summary is given in \ref{tab:linear-model}.
 
-```{r linear-model}
+```{r linear-model,message=FALSE}
 G21 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_Gamma21.rds"))
 
 G21_median <- G21 %>% 
@@ -475,6 +482,99 @@ G21 %>%
 
 <!-- from $nx_{i}$ x-categories and $nfacet_{j}$ facet-categories is $nx_{i}*nfacet_{j}$ and  -->
 
+_Generalised linear model_  
+
+In the linear model approach, $wpd_{raw} \in R$ was assumed, whereas, $wpd_{raw}$, Jensen-Shannon Distance (JSD) lies between 0 and 1. Furthermore, JSD follows a Chi-square distribution, which is a special case of Gamma distribution and hence belongs to exponential family of distributions. Therefore, we can fit a generalized linear model instead of a linear model to allow for the response variable to follow a Gamma distribution. The inverse link is used when we know that the mean response is bounded, which is applicable in our case since $0 \leq wpd_{raw}\leq 1$.
+
+We fit a Gamma generalized linear model with the inverse link which is of the form:  
+$$y = a+b*log(x) + e$$, where $y = median(wpd_{raw})$, $x = nx*nfacet$.
+Let $E(y) = \mu$ and $a + b*log(x) = g(\mu)$ where $g$ is the link function. Then $g(\mu)=  1/mu$ and $\hat \mu  = 1/(\hat a + \hat b log(x))$. The residuals from this model $(y-\hat y) = (y-1/(\hat a + \hat b log(x)))$ would be expected to have no dependency on $x$. Thus,  $wpd_{glm}$ is chosen as the residuals from this model and is defined as:
+$wpd_{glm} = wpd_{raw} - 1/(\hat a + \hat b*log(nx*nfacet))$.
+
+<!-- Please note: -->
+
+<!-- - subtracting the intercept brings the location of the transformed variable to 0 for either case -->
+<!-- - heterogeneity is higher for this case after normalization as compared to the earlier one. -->
+
+```{r wpd-glm-horizontal, echo = FALSE, message=FALSE, fig.caption = "$wpd_{glm}$ is plotted against log(nx*nfacet) and this transformation leads to the median of $wpd_{glm}$ to have no relationship with log(nx*nfacet)"}
+
+G21 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_Gamma21.rds"))
+
+G21_median <- G21 %>% 
+  group_by(nx*nfacet) %>% 
+  summarise(actual = median(value))
+
+
+
+glm_fit <- glm(actual ~ log(`nx * nfacet`),
+              family = Gamma(link = "inverse"),
+              data = G21_median)
+
+intercept <- glm_fit$coefficients[1]
+slope <- glm_fit$coefficients[2]
+
+
+G21_sd  = G21 %>% 
+    mutate(wpd_glm =  (value - (1/(intercept + slope*log(nx*nfacet)
+    )
+    )
+    ))
+
+scale_fac <- 1/G21_sd$wpd_glm %>% sd()
+
+
+# checking the fit of the residuals from glm fit
+
+# fitted_glm <- fitted(glm_fit, type = "response")
+# residuals <- residuals.glm(glm_fit, type = "response")
+# hist(residuals)
+
+
+#h = augment(glm_fit)
+# ggplot(h) +
+#   geom_histogram(aes(x = .resid))
+
+
+# residual <- G21_median$actual  - fitted_glm
+# 
+# hist(residual)
+
+
+
+G21 %>% 
+  ggplot(aes(x=log(nx*nfacet),
+             y = (value - (1/(intercept + slope*log(nx*nfacet)
+                    )
+                    )
+             )
+  )
+  ) +
+  geom_point() + stat_summary(fun=mean, geom="line", aes(group=1), color = "blue") + 
+  ylab("wpd_glm = wpd_raw - 1/(a  + b*log(nx*nfacet))")
+```
+
+```{r wpd-glm-dist, fig.cap = " The distribution of $wpd_{glm}$ is plotted. The distributions are more similar across higher nx and nfacet and dissimilar for fewer nc and nfacets."}
+
+
+G21_glm <- G21 %>% 
+  mutate(wpd_glm =  (value - (1/(intercept + slope*log(nx*nfacet)
+                    )
+                    )
+             ),
+         wpd_glm_scaled = ((wpd_glm*320)))
+
+G21_glm$wpd_glm_scaled %>% sd()
+
+
+G21_glm %>% 
+  ggplot() +
+  geom_density(aes(x = wpd_glm), 
+                   fill = "blue") +
+  facet_grid(nx~nfacet,
+             labeller = "label_both") +
+  theme(legend.position = "bottom") 
+```
+
 
 ## Results
 
@@ -487,11 +587,7 @@ Secondly, the behavior of raw and normalized wpd is explored in designs where th
 The tabulated values and graphical representations of the simulation results are provided in Appendix. The learning from the simulations are as follows:
 The values of the measure $wpd_{raw}$ is least for $D_{null}$, followed by 
 $D_{var_f}$, $D_{var_x}$) and $D_{var_{all}}$). This is a desirable result since the measure $wpd_{raw}$ was designed such that this relationship holds.
-Furthermore, the distribution of the measure $wpd_{raw}$ changes for different facet and x categories. The location of the distribution shifts to the right and it also becomes more skewed for more higher facet and x-axis categories. Now this is not desirable, as it would mean that we can't compare the $wpd_{raw}$ values across different panels. The distribution of $wpd_{norm}$ looks more similar with at least the mean and standard of the distributions being uniform across panels. This means,  $wpd_{norm}$ could be used to measure differences in distribution across panels. Also, note that since the data is processed using normal-quantile-transform, this measure is independent of the intial distribution of the underlying data and hence is also comparable across different data sets. This is valid for the case when sample size $ntimes$ for each combination of categories is at least 30 and  $nperm$ used for computing $wpd_{norm}$ is at least 100. More detailed results about the properties of $wpd_{raw}$ and $wpd_{norm}$ could be found in Appendix.
-
-## Simulation environment
-
-Simulation studies were carried out to study the behavior of $wpd$, build the normalization method as well as compare and evaluate different normalization approaches. R version 4.0.1 (2020-06-06) is used with the platform: x86_64-apple-darwin17.0 (64-bit) running under: macOS Mojave 10.14.6 and MonaRCH, which is a next-generation HPC/HTC Cluster, designed from the ground up to address the computing needs of the Monash HPC community.
+Furthermore, the distribution of the measure $wpd_{raw}$ changes for different facet and x categories. The location of the distribution shifts to the right and it also becomes more skewed for more higher facet and x-axis categories. Now this is not desirable, as it would mean that we can't compare the $wpd_{raw}$ values across different panels. The distribution of $wpd_{norm}$ looks more similar with at least the mean and standard of the distributions being uniform across panels. This means,  $wpd_{norm}$ could be used to measure differences in distribution across panels. Also, note that since the data is processed using normal-quantile-transform, this measure is independent of the initial distribution of the underlying data and hence is also comparable across different data sets. This is valid for the case when sample size $ntimes$ for each combination of categories is at least 30 and  $nperm$ used for computing $wpd_{norm}$ is at least 100. More detailed results about the properties of $wpd_{raw}$ and $wpd_{norm}$ could be found in Appendix.
 
 
 # Ranking and selecting significant harmonies
